@@ -1,4 +1,5 @@
 Serf 0.1.1 []
+  Implement optimized iovec reads for header buckets
   Fix up 'make clean' and 'make distclean' (Issues 9, 10)
 
 Serf 0.1.0 [2006-12-14, r1087]
